Correct wrong color for category in homepage

--- a/css/style.scss
+++ b/css/style.scss
@@ -91,6 +91,9 @@ a:hover {
           font-weight: 900;
           padding: 4px 0px;
 
+          &.CSS {
+            background-color : #2AA9E0;
+          }
           &.Ruby {
             background: #e74c3c;
           }
